# exemple-formation

./: installer.cfg  pyproject.toml
exemple_formation/: flux.py  gui.py  models.py  web.py
exemple_formation/templates/: _base.html  article.html  articles.html  index.html
tests/: test_exemple_formation.py  test_models.py
