[tool.poetry]
name = "exemple-formation"
version = "0.1.0"
description = ""
authors = ["Ronan Amicel <ronan.amicel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.750.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
