[tool.poetry]
name = "exemple-formation"
version = "0.1.0"
description = ""
authors = ["Ronan Amicel <ronan.amicel@gmail.com>"]

[tool.poetry.scripts]
flux = "exemple_formation.flux:main"

[tool.poetry.dependencies]
python = ">=3.6"
requests = "^2.22"
sqlalchemy = "^1.3"
feedparser = "^5.2"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.750.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
